snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
c69ff420093b7e51cf4d2d076d10076cca6dc8e71e935ba6986c0364beeb86ee3dc56cb9c28250808b3c8efcb32aba2419975d87095e585ce7de584ccc877369